--- a/index.html
+++ b/index.html
@@ -17,10 +17,47 @@
         <h2><span class="first-name">Asifur Rahman </span> protfolio</h2>
         <p>Professional web developer</p>
         <p>I am a mern stack web developer> i know HTML, CSS, JAVASCRIPT, BOOTSRAP and one my way to learing React and other language</p>
+        <a class="hire-b"href="https://www.linkedin.com/in/asifur-rahman-99868522b/">Hire me</a>
         </div>
         <div class="head-text">
              <img src="image/img-1.jpg" alt="main-picture">
         </div>
         </section>
+        <section class="second-sec">
+            <div class="head-text-2">
+                <img src="image/img-1.jpg" alt="main-picture">
+           </div>
+           <div class="head-text-2">
+            <h1>AIM HARD, DREAM BIG</h1>
+        <p>My web development skill</p>
+        <p>I am a mern stack web developer> i know HTML, CSS, JAVASCRIPT, BOOTSRAP and one my way to learing React and other language</p>
+        <a class="hire-b"href="https://drive.google.com/file/d/1qfCxH5mSv3ilR8u4cgfa1I-lzRSYp0Fp/view?usp=share_link">Download my resume </a>
+        </div>
+        </section>
+        <section class="experiencesec">
+            <div class="experience">
+                <div class="head-text3">
+                    <h3>Experience</h3>
+                </div>
+                <div class="head-text4">
+                    <div class="box1">
+                        <h4>Full stack web developer</h4>
+                        <p class="box-han">2021 to present | experienced</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, veniam labore magnam ducimus necessitatibus, veritatis iusto eum cumque quaerat perferendis commodi praesentium illum voluptatem tempore excepturi consequatur pariatur minus. Facere?</p>
+                    </div>
+                    <div class="box1">
+                        <h4>Jonior Web developer</h4>
+                        <p class="box-han">2017 to 2021</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia molestias atque impedit consectetur deserunt dolorem eaque quae itaque deleniti ipsum! Est ipsam facilis in vero architecto enim. Impedit, porro aliquam?</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <footer>
+            All right reserved by Asifur Rahman
+        </footer>
 </body>
 </html>
